# A4VAI-Algorithms-ROS2

./: .gitignore  .gitmodules
CollisionAvoidance/custom_msgs/: CMakeLists.txt
CollisionAvoidance_Test/collision_avoidance/collision_avoidance/: obstacle_avoidance_ros2.py
Controller/controller/controller/: controller.py  test_path_planning.py
Controller/custom_msgs/msg/: PathPlanningHeartbeat.msg
PathFollowing/pathfollowing/pathfollowing/: node_att_ctrl.py
PathPlanning/custom_msgs/: CMakeLists.txt
PathPlanning/custom_msgs/msg/: CollisionAvoidanceHeartbeat.msg  ControllerHeartbeat.msg  ConveyLocalWaypointComplete.msg  PathFollowingHeartbeat.msg
PathPlanning/pathplanning/pathplanning/: Plan2WP.py
Python_version_easy/: direct_infer.py  vec_normalize.pkl  walid.onnx
algorithm_test/algorithm_test/ca_pf_integrated_test/: ca_pf_integrated_test.py
algorithm_test/algorithm_test/collosion_avoidance_unit_test/: collision_avoidance_test.py
algorithm_test/algorithm_test/lib/: publisher.py
algorithm_test/algorithm_test/path_following_unit_test/: path_following_test.py
algorithm_test/algorithm_test/pp_pf_integrated_test/: pp_pf_integrated_test.py
collision_avoidance/collision_avoidance/: obstacle_avoidance_ros2.py
controller/controller/: controller.py
controller/controller/lib/: common_fuctions.py  data_class.py  publisher.py  subscriber.py
custom_msgs/msg/: StateFlag.msg
foxglove/: CLAUDE.md  OBSTACLE_DETECTION.md  package.xml  setup.cfg  setup.py
foxglove/foxglove/: foxglove.py
lidar/lidar/: check_collision.py  lidar.py
lidar/lidar/lib/: callback_functions.py  data_class.py
pathfollowing/: README.md
pathfollowing/pathfollowing/necessary_settings/: quadrotor_iris_parameters.py
plotter/plotter/: initVar.py  plotter (copy).py  plotter.py  plotter_orig.py
plotter/plotter/plotter/: initVar.py
rs_converter/: CMakeLists.txt  package.xml
rs_converter/rviz_cfg/: inha_ros2.rviz
rs_converter/src/: point_cloud_feature_extractor.cpp  point_cloud_feature_extractor_cov.cpp  point_cloud_filter_node.cpp  rs_converter.cpp
